Fix overflow home page

--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,7 @@ div.card {
 
 .home {
   height: 100vh;
+  overflow: auto;
 }
 
 div.card-body,
